--- a/Controller/systemctl/motor.service
+++ b/Controller/systemctl/motor.service
@@ -2,7 +2,7 @@
 Description=Start Motor
 
 [Service]
-ExecStart=/usr/bin/python3 /home/pi/startMotor.py
+ExecStart=/usr/bin/python3 /home/pi/proj/startMotor.py
 
 [Install]
 WantedBy=multi-user.target
